# machine_learning_esgi

./: CMakeLists.txt  MultiCouche.cpp  MultiCouche.h  lineaire.cs  machine_learning.rar  main.c  main.cpp
Unity Lineaire/Assets/: HARD.unity  SOFT.unity  XOR.unity  bleu.mat  lineaire.cs  lineaire.unity  lineaire2.cs  lineaireEx2.unity
linear regression/: Linear.cs
linear regression/Assets/: Blue.mat  Green.mat  Linear.cs  NewBehaviourScript.cs  NewBehaviourScript1.cs  NotOK XOR.unity  NotOK corss.unity  NotOK soft.unity  Red.mat  linear regression.unity  regression 50.unity  test1.unity
linear regression/LinearRegressionCpp/: ConsoleApplication1.sln
linear regression/LinearRegressionCpp/ConsoleApplication1/: ConsoleApplication1.vcxproj  Source.cpp
multiCouche/: MultiCouche.cpp  MultiCouche.h  multiLibrayrie.cpp
